[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/HIRCExplorer.gd" type="Script" id=1]

[node name="HIRCExplorer" type="Tree"]
anchor_right = 1.0
anchor_bottom = 1.0
columns = 2
hide_root = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_pressed" from="." to="." method="_on_HIRCExplorer_button_pressed"]
[connection signal="item_activated" from="." to="." method="_on_HIRCExplorer_item_activated"]
[connection signal="item_edited" from="." to="." method="_on_HIRCExplorer_item_edited"]
